--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,23 @@
 ## User settings
 xcuserdata/
 
+## Compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
+*.xcscmblueprint
+*.xccheckout
+
+## Compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
+build/
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
 ## Obj-C/Swift specific
 *.hmap
 
@@ -49,6 +66,10 @@ playground.xcworkspace
 
 Carthage/Build/
 
+# Accio dependency management
+Dependencies/
+.accio/
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo.
@@ -60,3 +81,88 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Code Injection
+#
+# After new code Injection tools there's a generated folder /iOSInjectionProject
+# https://github.com/johnno1962/injectionforxcode
+
+iOSInjectionProject/
+
+# macOS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# VSCode
+.vscode/
+
+# JetBrains IDEs
+.idea/
+
+# Vim
+*.swp
+*.swo
+
+# Backup files
+*~
+*.orig
+*.bak
+
+# Log files
+*.log
+
+# Temporary files
+*.tmp
+
+# Archive files (unless they are distribution packages)
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Except for release archives you want to track
+!Releases/*.zip
+!Releases/*.dmg
+
+# Local configuration files
+config.local.*
+.env.local
+
+# Test coverage reports
+*.coverage
+coverage/
+
+# Documentation build artifacts
+docs/_build/
+.doc_build/
+
+# Nested git repositories (to prevent the issue you encountered)
+**/.git/
+
+# MacForge specific
+# Add any app-specific files you want to ignore
+*.mobileconfig.backup
+temp_profiles/
