Fix CI workflow paths: Add working-directory to main CI, enable Swift CI on development branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,22 +18,31 @@ jobs:
       run: sudo xcode-select -s /Applications/Xcode_15.0.app/Contents/Developer
     
     - name: Build project
+      working-directory: DesktopApp
       run: |
+        echo "Building MacForge project..."
         if [ -f "MacForge.xcodeproj/project.pbxproj" ]; then
-          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' build
+          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS,arch=x86_64' build
+          echo "Build completed successfully!"
         elif [ -f "MacForge.xcworkspace/contents.xcworkspacedata" ]; then
-          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' build
+          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS,arch=x86_64' build
+          echo "Build completed successfully!"
         else
-          echo "No Xcode project or workspace found"
+          echo "No Xcode project or workspace found in DesktopApp directory"
+          ls -la
           exit 1
         fi
     
     - name: Run tests (if available)
+      working-directory: DesktopApp
       run: |
+        echo "Running tests..."
         if [ -f "MacForge.xcodeproj/project.pbxproj" ]; then
-          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' test
+          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS,arch=x86_64' test
+          echo "Tests completed successfully!"
         elif [ -f "MacForge.xcworkspace/contents.xcworkspacedata" ]; then
-          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' test
+          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS,arch=x86_64' test
+          echo "Tests completed successfully!"
         else
           echo "No tests to run"
         fi
