--- a/.github/workflows/swift-ci.yml
+++ b/.github/workflows/swift-ci.yml
@@ -17,11 +17,15 @@ jobs:
       with:
         fetch-depth: 0
     
-    - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_15.0.app/Contents/Developer
+    - name: Setup Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: 'latest-stable'
     
     - name: Show Xcode version
-      run: xcodebuild -version
+      run: |
+        echo "Xcode version:"
+        xcodebuild -version
     
     - name: List project structure
       run: |
@@ -40,7 +44,7 @@ jobs:
             -project MacForge.xcodeproj \
             -scheme MacForge \
             -configuration Debug \
-            -destination 'platform=macOS,arch=x86_64' \
+            -destination 'platform=macOS' \
             -derivedDataPath ./build \
             | xcpretty --color --simple || exit 1
           echo "Build completed successfully!"
@@ -58,7 +62,7 @@ jobs:
             -project MacForge.xcodeproj \
             -scheme MacForge \
             -configuration Debug \
-            -destination 'platform=macOS,arch=x86_64' \
+            -destination 'platform=macOS' \
             -derivedDataPath ./build \
             -enableCodeCoverage YES \
             | xcpretty --color --simple || exit 1
@@ -77,7 +81,7 @@ jobs:
             -project MacForge.xcodeproj \
             -scheme MacForge \
             -configuration Release \
-            -destination 'platform=macOS,arch=x86_64' \
+            -destination 'platform=macOS' \
             -derivedDataPath ./build \
             | xcpretty --color --simple || exit 1
           echo "Release build completed successfully!"
@@ -102,11 +106,15 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Select Xcode version
-      run: sudo xcode-select -s /Applications/Xcode_15.0.app/Contents/Developer
+    - name: Setup Xcode
+      uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: 'latest-stable'
     
     - name: Show Swift version
-      run: swift --version
+      run: |
+        echo "Swift version:"
+        swift --version
     
     - name: Check Swift package
       run: |
