fix: Resolve CI build failures by disabling code signing
CI WORKFLOW FIXES:
- Updated ci.yml workflow to disable code signing for all build steps
- Added CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
- Applied to Debug build, Release build, and test steps
- Reverted swift-ci.yml changes (was already working correctly)

BUILD CONFIGURATION:
- Debug builds: No code signing required ✅
- Release builds: No code signing required ✅
- Test execution: No code signing required ✅
- Swift CI workflows: Left unchanged (already passing) ✅

EXPECTED RESULT:
- 'Build MacForge / build (push)' should now pass ✅
- 'Build and Test MacForge / build (push)' should now pass ✅
- Swift CI workflows continue to pass ✅

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,10 +61,10 @@ jobs:
       run: |
         echo "Building MacForge project..."
         if [ -f "MacForge.xcodeproj/project.pbxproj" ]; then
-          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' build
+          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
           echo "Build completed successfully!"
         elif [ -f "MacForge.xcworkspace/contents.xcworkspacedata" ]; then
-          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' build
+          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
           echo "Build completed successfully!"
         else
           echo "No Xcode project or workspace found in DesktopApp directory"
@@ -77,10 +77,10 @@ jobs:
       run: |
         echo "Building MacForge project (Release)..."
         if [ -f "MacForge.xcodeproj/project.pbxproj" ]; then
-          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' -configuration Release build
+          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
           echo "Release build completed successfully!"
         elif [ -f "MacForge.xcworkspace/contents.xcworkspacedata" ]; then
-          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' -configuration Release build
+          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' -configuration Release CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO build
           echo "Release build completed successfully!"
         else
           echo "No Xcode project or workspace found in DesktopApp directory"
@@ -92,10 +92,10 @@ jobs:
       run: |
         echo "Running tests..."
         if [ -f "MacForge.xcodeproj/project.pbxproj" ]; then
-          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' test
+          xcodebuild -project MacForge.xcodeproj -scheme MacForge -destination 'platform=macOS' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO test
           echo "Tests completed successfully!"
         elif [ -f "MacForge.xcworkspace/contents.xcworkspacedata" ]; then
-          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' test
+          xcodebuild -workspace MacForge.xcworkspace -scheme MacForge -destination 'platform=macOS' -configuration Debug CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO test
           echo "Tests completed successfully!"
         else
           echo "No tests to run"
