feat: Consolidate GitHub Actions workflows into streamlined structure
🔄 WORKFLOW CONSOLIDATION:

**Before (8 workflows):**
- ci.yml (Build and Test MacForge)
- build.yml (Build MacForge)
- release.yml (Create Release)
- branch-sync.yml (Branch Synchronization)
- swift-ci.yml (Swift CI)
- ci-simple.yml (duplicate)
- branch-sync-simple.yml (duplicate)
- dependabot-simple.yml (duplicate)

**After (3 workflows):**
- main.yml (MacForge CI/CD) - Consolidated build, test, and release
- branch-sync.yml (Branch Synchronization) - Simplified
- swift-ci.yml (Swift CI) - Unchanged (working)

🎯 MAIN WORKFLOW (main.yml):
- **Build and Test Job**: Handles all build and test operations
- **Release Job**: Only runs on version tags (v*.*.*)
- **Conditional Logic**: Release only runs after successful build/test
- **Unified Triggers**: Push to main, PRs, and version tags
- **Proper Permissions**: Write access only for release operations

🔧 BRANCH SYNC (branch-sync.yml):
- **Simplified Logic**: Basic development branch sync
- **Error Handling**: Graceful fallbacks for merge conflicts
- **Conditional Execution**: Only runs after successful main workflows

✅ BENEFITS:
- Reduced from 8 to 3 workflow files
- Eliminated redundancy and duplicate workflows
- Simplified maintenance and debugging
- Better resource utilization
- Cleaner GitHub Actions interface
- Maintained all essential functionality

The consolidated structure provides the same functionality with
significantly reduced complexity and maintenance overhead.

--- a/.github/workflows/branch-sync.yml
+++ b/.github/workflows/branch-sync.yml
@@ -2,7 +2,7 @@ name: Branch Synchronization
 
 on:
   workflow_run:
-    workflows: ["Build and Test MacForge", "Swift CI"]
+    workflows: ["MacForge CI/CD", "Swift CI"]
     types: [completed]
     branches: [main]
 
